--- a/requirements.txt
+++ b/requirements.txt
@@ -55,7 +55,7 @@ jupyterlab-widgets==1.0.2
 keras==2.8.0
 Keras-Preprocessing==1.1.2
 kiwisolver==1.3.2
-libclang==13.0.0
+##libclang==12.0.0
 llvmlite==0.38.0
 lockfile==0.12.2
 Markdown==3.3.6
@@ -75,10 +75,10 @@ nibabel==3.2.2
 nose==1.3.7
 notebook==6.4.8
 numpy==1.19.2
-nvidia-cuda-cupti==11.3.58
-nvidia-pyindex==1.0.9
+#nvidia-cuda-cupti==11.3.58
+#nvidia-pyindex==1.0.9
 oauthlib==3.2.0
-opencv-python==4.5.5.64
+##opencv-python==4.5.1.48
 opt-einsum==3.3.0
 packaging==21.3
 pandas==1.4.0
@@ -123,16 +123,16 @@ sympy==1.9
 tensorboard==2.8.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
-tensorflow==2.4.0
+##tensorflow==2.4.1
 tensorflow-estimator==2.4.0
-tensorflow-io-gcs-filesystem==0.24.0
+##tensorflow-io-gcs-filesystem==0.22.0
 termcolor==1.1.0
 terminado==0.13.1
 testpath==0.5.0
 tf-estimator-nightly==2.8.0.dev2021122109
 tf-slim==1.1.0
 threadpoolctl==3.1.0
-torch==1.11.0
+##torch==1.10.0
 tornado==6.1
 tqdm==4.64.0
 traitlets==5.0.5
